name:                envyM
version:             1.5.1.0
synopsis:            An environmentally friendly way to deal with environment variables
license:             BSD3
license-file:        LICENSE
author:              David Johnson, Tim Adams, Eric Mertens
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2015
category:            System
build-type:          Simple
cabal-version:       >=1.10
description:
  For package use information see the <https://github.com/phlummox/envyM/blob/master/README.md README.md>

extra-source-files:
    README.md
    examples/Test.hs

library
  exposed-modules:      System.Envy
  ghc-options:          -Wall
                        -fwarn-tabs
  if impl(ghc >= 8.0)
    ghc-options:        -Wredundant-constraints
                        -Wno-type-defaults
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-name-shadowing
                        -Wextra
  if impl(ghc >= 8.2)
    ghc-options:        -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:        -Wmissing-export-lists
                        -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:        -Wmissing-deriving-strategies

  hs-source-dirs:       src
  build-depends:        base         >= 4.7
                      , bytestring
                      , containers   >= 0.5
                      , mtl
                      , text
                      , time         >= 1.5
                      , transformers >= 0.4
  default-language:     Haskell2010

test-suite spec
    type:               exitcode-stdio-1.0
    ghc-options:        -Wall
                        -fwarn-tabs
    if impl(ghc >= 8.0)
      ghc-options:      -Wredundant-constraints
                        -Wno-type-defaults
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-name-shadowing
                        -Wextra
    if impl(ghc >= 8.2)
      ghc-options:      -fhide-source-paths
    if impl(ghc >= 8.4)
      ghc-options:      -Wmissing-export-lists
                        -Wpartial-fields
    if impl(ghc >= 8.8)
      ghc-options:      -Wmissing-deriving-strategies

    hs-source-dirs:     tests
    main-is:            Main.hs
    build-depends:      base
                      , bytestring
                      , envyM
                      , hspec
                      , mtl
                      , quickcheck-instances
                      , QuickCheck
                      , text
                      , time
                      , transformers
    default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/phlummox/envym
